# A-Z-Household-Services-V2

./: README.md
backend/: .gitignore  README.md  README_CELERY.md  celery_app.py  config.py  manage.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  celery_config.py  error_handlers.py  extensions.py  tasks.py
backend/app/models/: __init__.py  models.py
backend/app/routes/: __init__.py  admin.py  auth.py  professional.py  routes.py  service_request.py  user.py
backend/app/schemas/: __init__.py  schema.py
backend/app/services/: __init__.py  admin_service.py  base_service.py  professional_document_service.py  professional_service.py  service_request_service.py  user_service.py
backend/app/templates/: monthly_report.html
backend/migrations/versions/: 4c2aa67bfbc6_.py
backend/uploads/exports/: .gitkeep
frontend/: README.md  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/layout/: AppLayout.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: Home.vue  Login.vue  NotFound.vue  Register.vue
frontend/src/views/admin/: Customers.vue  Dashboard.vue  Professionals.vue  ServiceRequests.vue  Services.vue
frontend/src/views/customer/: Dashboard.vue  NewRequest.vue  Profile.vue  ServiceRequests.vue
frontend/src/views/professional/: Dashboard.vue  Profile.vue  ServiceRequests.vue
