[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amqp==5.3.1",
    "async-timeout==5.0.1",
    "billiard==4.2.1",
    "blinker==1.9.0",
    "celery==5.4.0",
    "click==8.1.8",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "flask==3.1.0",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.1.1",
    "gunicorn==23.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "kombu==5.4.2",
    "markupsafe==3.0.2",
    "packaging==24.2",
    "prompt-toolkit==3.0.50",
    "python-dateutil==2.9.0.post0",
    "redis==5.2.1",
    "six==1.17.0",
    "sqlalchemy==2.0.37",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
]
